--- a/css/reset.css
+++ b/css/reset.css
@@ -1,10 +1,17 @@
-body, ol, li, p{
+body, ol, p{
   margin: 0;
+}
+
+input, ol{
   padding: 0;
 }
 
-li{
-  list-style-type: none;
+ol{
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
 }
 
 input{
@@ -18,8 +25,4 @@ textarea{
   border: none;
   outline: none;
   resize: none;
-}
-
-a{
-  text-decoration: none;
 }
