--- a/css/smartphone/icon.css
+++ b/css/smartphone/icon.css
@@ -3,13 +3,10 @@
   font-size: 0;
   transition: background-color 0.1s linear;
 }
-.icon:hover{
-  cursor: pointer;
-}
-.icon.dark_background:hover{
+.icon.dark_background:active{
   background-color: rgb(30, 30, 30);
 }
-.icon.red_background:hover{
+.icon.red_background:active{
   background-color: rgba(255, 75, 75, 0.6);
 }
 
@@ -22,7 +19,7 @@
 .icon.rotate_270 > canvas{
   transform: rotate(270deg);
 }
-.icon:hover > canvas{
+.icon:active > canvas{
   filter: brightness(3);
 }
 
@@ -46,7 +43,7 @@
 @media (orientation: landscape) {
   .icon.add{
     width: 64px;
-    padding: calc(50vh - 8px - 48px) 0;
+    padding: calc((var(--vh) / 2) - 8px - 48px) 0;
     overflow: hidden;
   }
   .icon.add > canvas{
@@ -58,12 +55,12 @@
   padding-right: calc(100% - 64px);
 }}
 @media (orientation: landscape) {.icon.trash_back{
-  padding-bottom: calc(100vh - 16px - 64px);
+  padding-bottom: calc(var(--vh) - 16px - 64px);
 }}
 
 @media (orientation: portrait) {.icon.trash_delete_all{
   padding: 0 calc(50% - 32px);
 }}
 @media (orientation: landscape) {.icon.trash_delete_all{
-  padding: calc(50vh - 8px - 32px) 0;
+  padding: calc((var(--vh) / 2) - 8px - 32px) 0;
 }}
