--- a/css/desktop/reset.css
+++ b/css/desktop/reset.css
@@ -1,9 +1,13 @@
-body, ol, p{
+body, h1, ol, p{
   margin: 0;
 }
 
 input, ol{
   padding: 0;
+}
+
+h1{
+  font-weight: normal;
 }
 
 ol{
@@ -25,4 +29,13 @@ textarea{
   border: none;
   outline: none;
   resize: none;
+}
+
+select{
+  background: none;
+  border: none;
+  outline: none;
+}
+option{
+  background: inherit;
 }
