--- a/css/desktop/main.css
+++ b/css/desktop/main.css
@@ -1,28 +1,35 @@
-body{
-  background-color: rgb(45, 45, 45);
+main, aside{
+  display: inline-block;
+  vertical-align: top;
+}
+main{
+  width: calc(100% - 256px);
+  height: 100vh;
+  overflow: auto;
+}
+main.full{
+  width: 100vw;
 }
 
-/* Thanks CodeMan38 for this font <3 */
-/* Link : https://fonts.google.com/specimen/Press+Start+2P */
-/* Contact : cody@zone38.net */
+h1, p, input, textarea, select{
+  font-family: "press_start_2p";
+}
+
+.scrollbar_custom::-webkit-scrollbar{
+  width: 8px;
+}
+.scrollbar_custom::-webkit-scrollbar-track{
+  background: rgb(60, 60, 60);
+}
+.scrollbar_custom::-webkit-scrollbar-thumb{
+  background: rgb(35, 35, 35);
+}
+.scrollbar_custom::-webkit-scrollbar-thumb:hover{
+  background: rgb(30, 30, 30);
+}
+
 @font-face{
   font-family: "press_start_2p";
   src: url("../../rsc/font/press_start_2p.ttf");
   font-display: swap;
-}
-
-body::-webkit-scrollbar{
-  width: 12px;
-}
-.scrollbar_custom::-webkit-scrollbar{
-  width: 8px;
-}
-body::-webkit-scrollbar-track, .scrollbar_custom::-webkit-scrollbar-track{
-  background: rgb(60, 60, 60);
-}
-body::-webkit-scrollbar-thumb, .scrollbar_custom::-webkit-scrollbar-thumb{
-  background: rgb(35, 35, 35);
-}
-body::-webkit-scrollbar-thumb:hover, .scrollbar_custom::-webkit-scrollbar-thumb:hover{
-  background: rgb(30, 30, 30);
 }
