--- a/css/smartphone/main.css
+++ b/css/smartphone/main.css
@@ -1,30 +1,67 @@
-body{
-  background-color: rgb(45, 45, 45);
-}
-
-/* Thanks CodeMan38 for this font <3 */
-/* Link : https://fonts.google.com/specimen/Press+Start+2P */
-/* Contact : cody@zone38.net */
-@font-face {
-  font-family: "press_start_2p";
-  src: url("../../rsc/font/press_start_2p.ttf");
-  font-display: swap;
-}
-
-#menu{
-  background-color: rgb(45, 45, 45);
+header{
+  margin: 8px 0 8px 8px;
+  overflow: hidden;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 }
-@media (orientation: portrait) {#menu{
+@media (orientation: portrait) {header{
+  width: calc(100vw - 16px);
+  height: 64px;
+}}
+@media (orientation: landscape) {header{
+  display: inline-block;
+  width: 64px;
+  height: calc(var(--vh) - 16px);
+  vertical-align: top;
+}}
+
+main{
+  overflow: auto;
+}
+main.full{
+  height: var(--vh);
+  width: 100%;
+  margin: 0;
+}
+@media (orientation: portrait) {main{
+  height: calc(var(--vh) - 16px - 64px - 64px - 16px);
+}}
+@media (orientation: landscape) {main{
+  display: inline-block;
+  width: calc(100vw - 16px - 64px - 64px - 16px);
+  height: calc(var(--vh) - 16px);
+  margin: 8px;
+  vertical-align: top;
+}}
+@media (orientation: portrait) {main.half_full{
+  height: calc(var(--vh) - 16px - 64px);
+}}
+@media (orientation: landscape) {main.half_full{
+  width: calc(100vw - 16px - 64px - 8px);
+}}
+
+footer{
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
+@media (orientation: portrait) {footer{
   width: calc(100vw - 16px);
   height: 64px;
   margin: 8px 0 8px 8px;
   text-align: center;
 }}
-@media (orientation: landscape) {#menu{
+@media (orientation: landscape) {footer{
   display: inline-block;
   width: 64px;
   height: calc(var(--vh) - 16px);
   margin: 8px 8px 8px 0;
   vertical-align: top;
 }}
+
+h1, p, input, textarea, select{
+  font-family: "press_start_2p";
+}
+
+@font-face{
+  font-family: "press_start_2p";
+  src: url("../../rsc/font/press_start_2p.ttf");
+  font-display: swap;
+}
