--- a/css/smartphone/note.css
+++ b/css/smartphone/note.css
@@ -1,16 +1,3 @@
-@media (orientation: portrait) {#note_list{
-  height: calc(var(--vh) - 16px - 64px - 64px - 16px);
-  overflow: auto;
-}}
-@media (orientation: landscape) {#note_list{
-  display: inline-block;
-  width: calc(100vw - 16px - 64px - 64px - 16px);
-  height: calc(var(--vh) - 16px);
-  margin: 8px;
-  vertical-align: top;
-  overflow: auto;
-}}
-
 .note{
   margin: 16px 0 0 8px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
@@ -20,14 +7,20 @@
     width: calc(100vw - 16px);
     height: 320px;
   }
+  .note:last-child{
+    margin: 16px 0 8px 8px;
+  }
   .note:first-child{
-    margin: 0 0 0 8px;
+    margin: 8px 0 0 8px;
   }
 }
 @media (orientation: landscape) {
   .note{
     width: calc(100% - 16px);
     height: 320px;
+  }
+  .note:last-child{
+    margin: 16px 0 4px 8px;
   }
   .note:first-child{
     margin: 4px 0 0 8px;
@@ -47,8 +40,7 @@
   box-sizing: border-box;
   vertical-align: top;
   color: rgb(245, 245, 245);
-  font-family: "press_start_2p";
-  font-size: 16px;
+  font-size: 15px;
   transition: background-color 0.1s linear;
 }
 
@@ -65,8 +57,7 @@
   line-height: 28px;
   box-sizing: border-box;
   color: rgb(235, 235, 235);
-  font-family: "press_start_2p";
-  font-size: 14px;
+  font-size: 13px;
   overflow: auto;
   cursor: auto;
 }
@@ -82,17 +73,3 @@
   width: calc(100% - 64px);
   padding: 0 16px;
 }
-
-@media (orientation: portrait) {#note_settings{
-  height: calc(var(--vh) - 16px - 64px);
-  padding: 0 8px;
-  overflow: auto;
-}}
-@media (orientation: landscape) {#note_settings{
-  display: inline-block;
-  width: calc(100vw - 16px - 64px - 8px);
-  height: calc(var(--vh) - 16px);
-  margin: 8px;
-  vertical-align: top;
-  overflow: auto;
-}}
