--- a/css/smartphone/settings.css
+++ b/css/smartphone/settings.css
@@ -1,19 +1,3 @@
-#settings{
-  background-color: rgb(50, 50, 50);
-}
-@media (orientation: portrait) {#settings{
-  height: calc(var(--vh) - 16px - 64px);
-  overflow: auto;
-}}
-@media (orientation: landscape) {#settings{
-  display: inline-block;
-  width: calc(100vw - 8px - 16px - 64px);
-  height: calc(var(--vh) - 16px);
-  margin: 8px;
-  vertical-align: top;
-  overflow: auto;
-}}
-
 .settings_note{
   height: calc(320px - 128px);
   overflow: auto;
@@ -38,7 +22,7 @@
   padding: 16px 0;
   border-top: 1px solid rgb(65, 65, 65);
 }
-.settings_section.first{
+.settings_section:first-child{
   border: none;
 }
 
@@ -48,7 +32,6 @@
   box-sizing: border-box;
   line-height: 12px;
   color: rgb(100, 100, 100);
-  font-family: "press_start_2p";
   font-size: 10px;
   user-select: none;
 }
@@ -56,17 +39,16 @@
 .settings_section_element{
   display: inline-flex;
   width: 100%;
-  padding: 8px 0 8px 24px;
+  padding: 16px 0 16px 24px;
   box-sizing: border-box;
   align-items: center;
-  background-color: rgb(50, 50, 50);
   transition: background-color 0.1s linear;
 }
 .settings_section_element:active{
   background-color: rgb(45, 45, 45)
 }
-.settings_section_element.desc{
-  padding: 16px 0 16px 24px;
+#settings .settings_section_element:active{
+  background-color: rgb(35, 35, 35)
 }
 
 .settings_section_element_text{
@@ -76,9 +58,8 @@
 
 .settings_section_element_title{
   width: 100%;
-  line-height: 15px;
+  line-height: 20px;
   color: rgb(255, 255, 255);
-  font-family: "press_start_2p";
   font-size: 13px;
   user-select: none;
 }
@@ -88,7 +69,6 @@
   margin-top: 8px;
   line-height: 15px;
   color: rgb(100, 100, 100);
-  font-family: "press_start_2p";
   font-size: 10px;
   user-select: none;
 }
@@ -98,4 +78,22 @@
   width: 96px;
   text-align: center;
   font-size: 0;
+}
+
+.settings_section_element_select{
+  margin: 0 16px 0 16px;
+  user-select: none;
+}
+.settings_section_element_select > select{
+  min-width: 128px;
+  height: 48px;
+  padding: 0 8px;
+  color: rgb(200, 200, 200);
+  text-align-last: center;
+  background-color: rgb(40, 40, 40);
+  font-size: 12px;
+  transition: background-color 0.1s linear;
+}
+.settings_section_element:active > .settings_section_element_select > select{
+  background-color: rgb(45, 45, 45);
 }
