--- a/css/desktop/main.css
+++ b/css/desktop/main.css
@@ -15,21 +15,47 @@ h1, p, input, textarea, select{
   font-family: "press_start_2p";
 }
 
-.scrollbar_custom::-webkit-scrollbar{
-  width: 8px;
+.scrollbar::-webkit-scrollbar{
+  width: 15px;
 }
-.scrollbar_custom::-webkit-scrollbar-track{
-  background: rgb(60, 60, 60);
+.scrollbar::-webkit-scrollbar-thumb{
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: rgb(35, 35, 35);
 }
-.scrollbar_custom::-webkit-scrollbar-thumb{
-  background: rgb(35, 35, 35);
+.scrollbar::-webkit-scrollbar-thumb:hover{
+  background-color: rgb(30, 30, 30);
 }
-.scrollbar_custom::-webkit-scrollbar-thumb:hover{
-  background: rgb(30, 30, 30);
+
+.icon{
+  display: inline-block;
+  font-size: 0;
+  transition: background-color 0.1s linear;
+}
+.icon:hover{
+  cursor: pointer;
+}
+.icon > canvas{
+  transition: filter 0.1s linear;
+}
+.icon:hover > canvas{
+  filter: brightness(3);
+}
+
+.icon.dark_background:hover{
+  background-color: rgb(30, 30, 30);
+}
+.icon.red_background:hover{
+  background-color: rgba(255, 75, 75, 0.6);
+}
+
+.icon.rotate_180 > canvas{
+  transform: rotate(180deg);
 }
 
 @font-face{
   font-family: "press_start_2p";
-  src: url("../../rsc/font/press_start_2p.ttf");
+  src: url("../../rsc/font/press_start_2p.woff2");
   font-display: swap;
 }
