--- a/css/mobile/settings.css
+++ b/css/mobile/settings.css
@@ -80,20 +80,41 @@
   font-size: 0;
 }
 
-.settings_section_element_select{
-  margin: 0 16px 0 16px;
+#settings .select{
+  position: relative;
+  display: inline-block;
+  height: 48px;
+  overflow: hidden;
+}
+#settings .select.visible{
+  overflow: visible;
+}
+
+#settings .select_icon{
+  display: block;
+  width: 96px;
+  height: 48px;
+  text-align: center;
+}
+
+#settings .option_list{
+  z-index: 2;
+  position: absolute;
+  right: 0;
+  width: max-content;
+  max-width: 100vw;
+  border: 1px solid rgb(100, 100, 100);
+}
+
+#settings .option{
+  min-width: 96px;
+  line-height: 48px;
+  padding: 6px 12px;
+  color: rgb(200, 200, 200);
+  font-size: 13px;
+  background-color: rgb(40, 40, 40);
   user-select: none;
 }
-.settings_section_element_select > select{
-  min-width: 128px;
-  height: 48px;
-  padding: 0 8px;
-  color: rgb(200, 200, 200);
-  text-align-last: center;
-  background-color: rgb(40, 40, 40);
-  font-size: 12px;
-  transition: background-color 0.1s linear;
-}
-.settings_section_element:active > .settings_section_element_select > select{
-  background-color: rgb(45, 45, 45);
+#settings .option.selected{
+  background-color: rgb(40, 125, 225);
 }
