--- a/css/desktop/note.css
+++ b/css/desktop/note.css
@@ -46,6 +46,18 @@
   overflow: auto;
   cursor: auto;
 }
+.note_text::-webkit-scrollbar{
+  width: 15px;
+}
+.note_text::-webkit-scrollbar-thumb{
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: rgb(35, 35, 35);
+}
+.note_text::-webkit-scrollbar-thumb:hover{
+  background-color: rgb(30, 30, 30);
+}
 
 #note_fullscreen{
   width: calc(100% - 64px);
