--- a/css/mobile/settings.css
+++ b/css/mobile/settings.css
@@ -1,3 +1,100 @@
+.settings_section{
+  padding: 16px 0;
+  border-top: 1px solid rgb(65, 65, 65);
+}
+.settings_section:first-child{
+  border: none;
+}
+
+.settings_section_title{
+  margin: 16px 0;
+  padding: 0 0 0 16px;
+  color: rgb(100, 100, 100);
+  font-size: 10px;
+  user-select: none;
+}
+
+.settings_section_element{
+  display: inline-flex;
+  width: 100%;
+  padding: 16px 0 16px 24px;
+  box-sizing: border-box;
+  align-items: center;
+  transition: background-color 0.1s linear;
+}
+.settings_section_element:active{
+  background-color: rgb(35, 35, 35)
+}
+
+.settings_section_element_text{
+  width: calc(100% - 96px);
+}
+
+.settings_section_element_title{
+  line-height: 20px;
+  color: rgb(255, 255, 255);
+  font-size: 13px;
+  user-select: none;
+}
+
+.settings_section_element_description{
+  margin-top: 8px;
+  color: rgb(100, 100, 100);
+  line-height: 15px;
+  font-size: 10px;
+  user-select: none;
+}
+.settings_section_element.red .settings_section_element_description{
+  color: rgb(255, 125, 125);
+}
+
+.settings_section_element_icon{
+  width: 96px;
+  text-align: center;
+  font-size: 0;
+}
+
+.settings_section_element_select{
+  position: relative;
+  display: inline-block;
+  height: 48px;
+  overflow: hidden;
+}
+.settings_section_element_select.visible{
+  overflow: visible;
+}
+
+.settings_section_element_select .select_icon{
+  display: block;
+  width: 96px;
+  height: 48px;
+  text-align: center;
+}
+
+.settings_section_element_select .option_list{
+  z-index: 2;
+  position: absolute;
+  right: 0;
+  width: max-content;
+  max-width: 100vw;
+  margin-right: 8px;
+  border: 1px solid rgb(100, 100, 100);
+}
+
+.settings_section_element_select .option{
+  min-width: 96px;
+  line-height: 48px;
+  padding: 6px 12px;
+  color: rgb(200, 200, 200);
+  font-size: 13px;
+  background-color: rgb(40, 40, 40);
+  user-select: none;
+}
+.settings_section_element_select .option.selected{
+  color: rgb(255, 255, 255);
+  background-color: rgb(40, 120, 215);
+}
+
 .settings_note{
   height: calc(320px - 128px);
   overflow: auto;
@@ -16,106 +113,4 @@
   width: 64px;
   padding: 0 calc(50% - 160px);
   border: none;
-}
-
-.settings_section{
-  padding: 16px 0;
-  border-top: 1px solid rgb(65, 65, 65);
-}
-.settings_section:first-child{
-  border: none;
-}
-
-.settings_section_title{
-  margin: 16px 0;
-  padding: 0 0 0 16px;
-  box-sizing: border-box;
-  line-height: 12px;
-  color: rgb(100, 100, 100);
-  font-size: 10px;
-  user-select: none;
-}
-
-.settings_section_element{
-  display: inline-flex;
-  width: 100%;
-  padding: 16px 0 16px 24px;
-  box-sizing: border-box;
-  align-items: center;
-  transition: background-color 0.1s linear;
-}
-.settings_section_element:active{
-  background-color: rgb(45, 45, 45)
-}
-#settings .settings_section_element:active{
-  background-color: rgb(35, 35, 35)
-}
-
-.settings_section_element_text{
-  display: inline-block;
-  width: calc(100% - 96px);
-}
-
-.settings_section_element_title{
-  width: 100%;
-  line-height: 20px;
-  color: rgb(255, 255, 255);
-  font-size: 13px;
-  user-select: none;
-}
-
-.settings_section_element_description{
-  width: 100%;
-  margin-top: 8px;
-  line-height: 15px;
-  color: rgb(100, 100, 100);
-  font-size: 10px;
-  user-select: none;
-}
-
-.settings_section_element_icon{
-  display: inline-block;
-  width: 96px;
-  text-align: center;
-  font-size: 0;
-}
-
-#settings .select{
-  position: relative;
-  display: inline-block;
-  height: 48px;
-  overflow: hidden;
-}
-#settings .select.visible{
-  overflow: visible;
-}
-
-#settings .select_icon{
-  display: block;
-  width: 96px;
-  height: 48px;
-  text-align: center;
-}
-
-#settings .option_list{
-  z-index: 2;
-  position: absolute;
-  right: 0;
-  width: max-content;
-  max-width: 100vw;
-  border: 1px solid rgb(100, 100, 100);
-}
-
-#settings .option{
-  min-width: 96px;
-  line-height: 48px;
-  padding: 6px 12px;
-  color: rgb(200, 200, 200);
-  font-size: 13px;
-  background-color: rgb(40, 40, 40);
-  user-select: none;
-}
-#settings .option.selected{
-  color: rgb(255, 255, 255);
-  background-color: rgb(40, 120, 215);
 }
