--- a/css/desktop/menu.css
+++ b/css/desktop/menu.css
@@ -46,9 +46,6 @@
 #menu_note_trash{
   position: relative;
   z-index: 0;
-  margin-top: auto;
-  border-top: 2px solid rgb(35, 35, 35);
-  border-bottom: none;
 }
 
 #menu_note_trash_number{
@@ -56,7 +53,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  margin-top: 192px;
+  margin-top: 160px;
   text-align: center;
   color: rgb(65, 65, 65);
   font-size: 12px;
@@ -78,8 +75,9 @@
   width: 100%;
 }
 
-.menu.icon{
-  width: 100%;
-  padding: 32px;
-  box-sizing: border-box;
+#menu_note_add > .icon,
+#menu_note_trash > .icon,
+#menu_settings_back > .icon,
+#menu_trash_back > .icon{
+  padding: 0 32px;
 }
