--- a/css/mobile/note.css
+++ b/css/mobile/note.css
@@ -48,6 +48,7 @@
   position: relative;
   height: calc(100% - 64px);
   background-color: rgb(50, 50, 50);
+  overflow: hidden;
 }
 
 .note_text{
@@ -60,6 +61,9 @@
   font-size: 13px;
   overflow: auto;
   cursor: auto;
+}
+.note_text.blur{
+  filter: blur(5px);
 }
 
 #note_fullscreen{
