--- a/css/desktop/menu.css
+++ b/css/desktop/menu.css
@@ -12,22 +12,13 @@
   border-bottom: 2px solid rgb(35, 35, 35);
 }
 
-#menu_title, #menu_title_sub{
+#menu > *:first-child{
+  border-top: 1px solid rgb(35, 35, 35);
+}
+
+#menu_title_sub{
   text-align: center;
   user-select: none;
-}
-
-#menu_title > h1{
-  padding: 32px 0 32px 0;
-  color: rgb(235, 235, 235);
-  font-size: 24px;
-  line-height: 34px;
-}
-
-#menu_title > p{
-  margin-bottom: 16px;
-  color: rgb(155, 155, 155);
-  font-size: 12px;
 }
 
 #menu_title_sub > p{
